--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,106 +1,3 @@
-@import "./reset";
-// @font-face {
-//   font-family: "Poppins";
-//   src: url("/font/Poppins-Bold.ttf");
-// }
-html {
-  font-size: 10px;
-  margin: 0px;
-}
 body {
-  font-family: "Poppins", sans-serif;
-  // background-attachment: fixed;
-  overflow-y: hidden;
-  position: relative;
-  margin: 0px;
+    font-family: 'Inter', sans-serif;
 }
-img {
-  object-fit: cover;
-  width: 100%;
-  padding: 30px;
-}
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 5vh;
-}
-.image__slider {
-  position: relative;
-  svg {
-    height: 296px;
-    /* width: 296px; */
-    z-index: 9999;
-  }
-  &--one {
-    display: none;
-    position: absolute;
-    top: -1px;
-
-    .sliderInnertext {
-      background: url("/images/pattern-quotes.svg");
-      height: 50px;
-      background-repeat: no-repeat;
-      background-position: bottom center;
-      h2 {
-        color: hsl(240, 38%, 20%);
-        font-weight: 300;
-        margin-top: 20px;
-        font-size: 1.7rem;
-        // max-width: 100%;
-        // padding:0px 5px;
-        line-height: 26px;
-        text-align: center;
-      }
-      p {
-        font-weight: 700;
-        font-size: 1.7rem;
-        color: hsl(240, 38%, 20%);
-        padding-top: 10px;
-        text-align: center;
-        &:nth-of-type(2) {
-          color: hsl(240, 18%, 77%);
-          font-weight: 500;
-          padding-top: 6px;
-        }
-      }
-    }
-  }
-}
-.active {
-  display: block;
-}
-.last-svg {
-  position: fixed;
-  bottom: -64px;
-  width: 300px;
-  height: 20%;
-  left: 0px;
-  background: url("/images/pattern-curve.svg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  left: 0px;
-}
-.button {
-  position: relative;
-  .tabs {
-    position: absolute;
-    left: 40%;
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 80px;
-    border-radius: 10px;
-    height: 36px;
-    bottom: -9px;
-    svg {
-      width: 15px;
-      height: 15px;
-    }
-  }
-}
-/*
-Desktop(1440px) Design Start Here
-*/
-@import "./desktop";
